<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="292dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215"
        app:shapeAppearance="@style/roundedCorners"
        app:srcCompat="@mipmap/logo" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/hey_lets_get_you_parked_in_no_time"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/clickButtonInstruction"
        android:layout_width="330sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/please_share_your_location_so_we_can_locate_the_parking_spots_nearer_to_you_agree_to_share_location_of_this_device"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
        android:textColor="@color/black" />

    <Button
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:id="@+id/goToMapButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickButtonInstruction"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/take_me_to_map"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>